--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -1,12 +1,12 @@
 {
-	"id": "avo-landscape",
+	"id": "avocet-landscape",
 	"name": "avocet-landscape",
 	"shortname": "avocet-landscape",
 	"description": "A short one line description of your module",
 	"version": "0.0.0",
 	"license": "MIT",
-	"repository": "git+https://github.com/bitfocus/companion-module-your-module-name.git",
-	"bugs": "https://github.com/bitfocus/companion-module-your-module-name/issues",
+	"repository": "git+https://github.com/bitfocus/companion-module-avocet-landscape.git",
+	"bugs": "https://github.com/bitfocus/companion-module-avocet-landscape/issues",
 	"maintainers": [
 		{
 			"name": "Dan Maskell",
