--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "your-module-name",
-	"version": "0.1.0",
+	"name": "avocet-landscape",
+	"version": "1.0.1",
 	"main": "main.js",
 	"scripts": {
 		"format": "prettier -w ."
@@ -8,7 +8,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/bitfocus/companion-module-your-module-name.git"
+		"url": "git+https://github.com/bitfocus/companion-module-avocet-landscape.git"
 	},
 	"dependencies": {
 		"@companion-module/base": "~1.4.0"
