--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -2,8 +2,8 @@
 	"id": "avocet-landscape",
 	"name": "avocet-landscape",
 	"shortname": "avocet-landscape",
-	"description": "A short one line description of your module",
-	"version": "0.0.0",
+	"description": "Landscape Cues Panel",
+	"version": "1.0.0",
 	"license": "MIT",
 	"repository": "git+https://github.com/bitfocus/companion-module-avocet-landscape.git",
 	"bugs": "https://github.com/bitfocus/companion-module-avocet-landscape/issues",
