--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "avocet-landscape",
+	"id": "avo-landscape",
 	"name": "avocet-landscape",
 	"shortname": "avocet-landscape",
 	"description": "Landscape Cues Panel",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"license": "MIT",
 	"repository": "git+https://github.com/bitfocus/companion-module-avocet-landscape.git",
 	"bugs": "https://github.com/bitfocus/companion-module-avocet-landscape/issues",
